# routes/swagger.js
@@ -1,6 +1,6 @@
 import express from 'express';
 import * as contact from '../controllers/contact.js';
-import swaggerUI from 'swagger-ui-express';
+import swaggerUi from 'swagger-ui-express';
 import {createRequire} from "module";
 const route = express.Router();
 
@@ -10,9 +10,9 @@ console.log(JSON.stringify(swaggerDocument));
 
 // console.log("swagger");
 
-route.use('/api-docs', swaggerUI.serve);
-route.get('/api-docs', swaggerUI.setup(swaggerDocument));
+route.use('/api-docs', swaggerUi.serve);
+route.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
-console.log(swaggerUI.setup(swaggerDocument));
+// console.log(swaggerUI.setup(swaggerDocument));
 
 export default route;
